--- a/daniel.html
+++ b/daniel.html
@@ -14,13 +14,20 @@
 	    <link href="http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 	</head>
 	<body>
-		<div id="fullpage">
-		  <div class="section main">
-		  	<img class="logo" src="/Users/bitlab/Desktop/Bitlab web/img/bitlab.png">
-		  	<p>Lleva tu negocio al siguiente nivel</p>
-		  	<img class="arrow" src="/Users/bitlab/Desktop/Bitlab web/img/flecha.png">
-		  </div>
-		  <div class="section services"></div>
+		<div>
+			<img class="logo" src="img/bitlab.png">
 		</div>
+
+		<div id="fullpage">
+			<div class="section main">
+	 			<p>Lleva tu negocio al siguiente nivel</p>
+				<img class="arrow" src="img/flecha.png"/>
+			</div>
+
+		 	<div class="section services">
+		 		
+		 	</div>
+		</div>
+
 	</body>
 </html>
