--- a/daniel.html
+++ b/daniel.html
@@ -23,10 +23,7 @@
 	 			<p>Lleva tu negocio al siguiente nivel</p>
 				<img class="arrow" src="img/flecha.png"/>
 			</div>
-
-		 	<div class="section services">
-		 		
-		 	</div>
+		 	<div class="section services"></div>
 		</div>
 
 	</body>
