--- a/daniel.html
+++ b/daniel.html
@@ -9,13 +9,15 @@
 		<link rel="stylesheet" type="text/css" href="css/main.css" />
 		<script src="assets/javascript/fullPageInitializer.js"></script>
 
-		  <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+		<link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 	    <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-	    <link href="http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+		<link href='https://fonts.googleapis.com/css?family=Volkhov:400italic|Nunito:300' rel='stylesheet' type='text/css'>
 	</head>
+
 	<body>
 		<div>
 			<img class="logo" src="img/bitlab.png">
+						<div class="menu"></div>
 		</div>
 
 		<div id="fullpage">
@@ -23,7 +25,36 @@
 	 			<p>Lleva tu negocio al siguiente nivel</p>
 				<img class="arrow" src="img/flecha.png"/>
 			</div>
-		 	<div class="section services"></div>
+		 	<div class="section services">
+		 		<h2>Servicios</h2>
+		 		<div class="box">
+		 			<ul class="servicios">
+		 				<li>
+		 					<h5>Desarrollo web</h5>
+		 				</li>
+		 				<li>
+		 					<h5>Diseño web</h5>
+		 				</li>
+		 				<li>
+		 					<h5>Diseño gráfico</h5>
+		 				</li>
+		 				<li>
+		 					<h5>Branding</h5>
+		 				</li>
+		 				<li>
+		 					<h5>Social media</h5>
+		 				</li>
+		 			</ul>
+		 		</div>
+		 	</div>
+		 	<div class="section proceso">
+		 		<table>
+		 			<tr>
+		 				<td><img class="ilust" src="img/proceso.png"/></td>
+			 			<td id="content">Hola</td>
+		 			</tr>
+		 		</table>
+		 	</div>
 		</div>
 
 	</body>
