Centra el menú lateral

--- a/daniel.html
+++ b/daniel.html
@@ -14,13 +14,15 @@
 	</head>
 	<body>
 		<div class="slidebar">
-			<p>menú</p>
-			<ul>
-				<li><a href="#main"><span>Inicio</span></a></li>
-				<li><a href="#services"><span>Proceso</span></a></li>
-				<li><a href="http://bitlab.mx/nosotros/"><span>Nosotros</span></a></li>
-				<li><a href="http://bitlab.mx/contacto/"><span>Contacto</span></a></li>
-			</ul>
+			<div class="menu-container">
+				<p>menú</p>
+				<ul>
+					<li><a href="#main"><span>Inicio</span></a></li>
+					<li><a href="#services"><span>Proceso</span></a></li>
+					<li><a href="http://bitlab.mx/nosotros/"><span>Nosotros</span></a></li>
+					<li><a href="http://bitlab.mx/contacto/"><span>Contacto</span></a></li>
+				</ul>
+			</div>
 		</div>
 		
 		<div>
