Agrega botón de menú

--- a/daniel.html
+++ b/daniel.html
@@ -28,6 +28,7 @@
 		
 		<div>
 			<img class="logo" src="img/bitlab.png">
+			<img class="menu" src="img/menu.png" onclick="toggleMenu()">
 		</div>
 
 		<div id="fullpage">
