Proceso de trabajo añadido

--- a/daniel.html
+++ b/daniel.html
@@ -19,7 +19,8 @@
 				<p>menú</p>
 				<ul>
 					<li><a href="#main"><span>Inicio</span></a></li>
-					<li><a href="#services"><span>Proceso</span></a></li>
+					<li><a href="#services"><span>Servicios</span></a></li>
+					<li><a href="#process"><span>Proceso</span></a></li>
 					<li><a href="http://bitlab.mx/nosotros/"><span>Nosotros</span></a></li>
 					<li><a href="http://bitlab.mx/contacto/"><span>Contacto</span></a></li>
 				</ul>
@@ -38,7 +39,7 @@
 					<img class="arrow" src="img/flecha.png"/>
 	 			</a>
 			</div>
-		 	<div class="section services">
+		 	<div class="section services" data-anchor="services">
 		 		<h2>Servicios</h2>
 		 		<div class="box">
 		 			<ul class="servicios">
@@ -60,11 +61,16 @@
 		 			</ul>
 		 		</div>
 		 	</div>
-		 	<div class="section proceso">
+		 	<div class="section proceso" data-anchor="process">
 		 		<table>
 		 			<tr>
-		 				<td><img class="ilust" src="img/proceso.png"/></td>
-			 			<td id="content">Hola</td>
+		 				<td><img class="ilust" src="img/Proceso.png"/></td>
+			 			<td id="content">
+			 				<h6>Consultoría sin costo ni obligaciones.</h6>
+			 				<h3>CONOCE NUESTRO PROCESO DE TRABAJO</h3>
+			 				<div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci. Suspendisse eleifend, tortor eget convallis tincidunt, mi velit bibendum eros, eget consequat nisl justo sit amet lectus. Sed ornare elementum sapien et luctus. Nam elementum urna in blandit ornare. Suspendisse sed tortor vel lacus ultrices lobortis quis eget quam.</p>
+			 				<div class="button">Saber más</div>
+			 			</td>
 		 			</tr>
 		 		</table>
 		 	</div>
