--- a/daniel.html
+++ b/daniel.html
@@ -18,11 +18,10 @@
 			<div class="menu-container">
 				<p>menú</p>
 				<ul>
-					<li><a href="#main"><span>Inicio</span></a></li>
-					<li><a href="#services"><span>Servicios</span></a></li>
-					<li><a href="#process"><span>Proceso</span></a></li>
-					<li><a href="http://bitlab.mx/nosotros/"><span>Nosotros</span></a></li>
-					<li><a href="http://bitlab.mx/contacto/"><span>Contacto</span></a></li>
+					<li><a href="#main"	onclick="toggleMenu()"><span>Inicio</span></a></li>
+					<li><a href="#services" onclick="toggleMenu()"><span>Proceso</span></a></li>
+					<li><a href="http://bitlab.mx/nosotros/" onclick="toggleMenu()"><span>Nosotros</span></a></li>
+					<li><a href="http://bitlab.mx/contacto/" onclick="toggleMenu()"><span>Contacto</span></a></li>
 				</ul>
 			</div>
 		</div>
