--- a/daniel.html
+++ b/daniel.html
@@ -30,7 +30,7 @@
 			<img class="logo" src="img/bitlab.png">
 			<img class="menu" src="img/menu.png" onclick="toggleMenu()">
 		</div>
-
+<!--Main-->
 		<div id="fullpage">
 			<div class="section main" data-anchor="main">
 	 			<p>Lleva tu negocio al siguiente nivel</p>
@@ -60,6 +60,7 @@
 		 			</ul>
 		 		</div>
 		 	</div>
+<!--Proceso-->
 		 	<div class="section proceso" data-anchor="process">
 		 		<table>
 		 			<tr>
@@ -72,6 +73,17 @@
 			 			</td>
 		 			</tr>
 		 		</table>
+		 	</div>
+<!--Nosotros y Clientes-->	
+		 	<div class="section botsections fp-auto-height" data-anchor="nosotros">
+	 			<div class="nosotros" style="color:white">
+	 				<h6 style="color:white">¿Quiénes somos?</h6>
+	 				<h1>Conoce a nuestro equipo de trabajo</h1>
+	 				<a href="#"><div class="buttonwhite">Ver más</div></a>
+				</div>
+				<div>
+		 			<h1>Adiós</h1>
+		 		</div>
 		 	</div>
 		</div>
 	</body>
