Cambio de estilo

--- a/daniel.html
+++ b/daniel.html
@@ -16,7 +16,7 @@
 	<body>
 		<div class="slidebar">
 			<div class="menu-container">
-				<p>menú</p>
+				<p>Menú</p>
 				<ul>
 					<li><a href="#main"	onclick="toggleMenu()"><span>Inicio</span></a></li>
 					<li><a href="#services" onclick="toggleMenu()"><span>Proceso</span></a></li>
