--- a/daniel.html
+++ b/daniel.html
@@ -75,15 +75,13 @@
 		 		</table>
 		 	</div>
 <!--Nosotros y Clientes-->	
-		 	<div class="section botsections fp-auto-height" data-anchor="nosotros">
-	 			<div class="nosotros" style="color:white">
-	 				<h6 style="color:white">¿Quiénes somos?</h6>
-	 				<h1>Conoce a nuestro equipo de trabajo</h1>
-	 				<a href="#"><div class="buttonwhite">Ver más</div></a>
-				</div>
-				<div>
-		 			<h1>Adiós</h1>
-		 		</div>
+		 	<div class="section fp-auto-height nosotros" style="color:white">
+ 				<h6 style="color:white">¿Quiénes somos?</h6>
+ 				<h2>Conoce a nuestro equipo de trabajo</h2>
+ 				<a href="#"><div class="buttonwhite">Ver más</div></a>
+			</div>
+			<div class="section fp-auto-height clientes">
+		 			<h1>Adiós<br><br><br><br></h1>
 		 	</div>
 		</div>
 	</body>
