Correcciones de Hs

--- a/daniel.html
+++ b/daniel.html
@@ -33,7 +33,7 @@
 <!--Main-->
 		<div id="fullpage">
 			<div class="section main" data-anchor="main">
-	 			<p>Lleva tu negocio al siguiente nivel</p>
+	 			<h1>Lleva tu negocio al siguiente nivel</h1>
 	 			<a href="#services">
 					<img class="arrow" src="img/flecha.png"/>
 	 			</a>
@@ -66,8 +66,8 @@
 		 			<tr>
 		 				<td><img class="ilust" src="img/Proceso.png"/></td>
 			 			<td id="content">
-			 				<h6>Consultoría sin costo ni obligaciones.</h6>
-			 				<h3>CONOCE NUESTRO PROCESO DE TRABAJO</h3>
+			 				<h3>Consultoría sin costo ni obligaciones.</h3>
+			 				<h4>CONOCE NUESTRO PROCESO DE TRABAJO</h4>
 			 				<div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci. Suspendisse eleifend, tortor eget convallis tincidunt, mi velit bibendum eros, eget consequat nisl justo sit amet lectus. Sed ornare elementum sapien et luctus. Nam elementum urna in blandit ornare. Suspendisse sed tortor vel lacus ultrices lobortis quis eget quam.</p>
 			 				<a href="#"><div class="button">Saber más</div></a>
 			 			</td>
@@ -75,9 +75,9 @@
 		 		</table>
 		 	</div>
 <!--Nosotros y Clientes-->	
-		 	<div class="section fp-auto-height nosotros" style="color:white">
- 				<h6 style="color:white">¿Quiénes somos?</h6>
- 				<h2>Conoce a nuestro equipo de trabajo</h2>
+		 	<div class="section nosotros" style="color:white" data-anchor="nosotros">
+ 				<h5 style="color:white">¿Quiénes somos?</h5>
+ 				<h6>Conoce a nuestro equipo de trabajo</h6>
  				<a href="#"><div class="buttonwhite">Ver más</div></a>
 			</div>
 			<div class="section fp-auto-height clientes">
