--- a/nosotros.html
+++ b/nosotros.html
@@ -39,7 +39,7 @@
 					<img class="arrow" src="img/flecha.png"/>
 	 			</a>
 			</div>
-<!--Proces-->
+<!--Process-->
 		<div class="section procesocontent" data-anchor="nosotroscontent">
 		 	<div class="center">
 		 		<h3>Consultoría sin costo ni obligaciones.</h3>
