Se agregó efecto blanco y negro

--- a/daniel.html
+++ b/daniel.html
@@ -82,29 +82,14 @@
 		 	</div>
 <!--Nosotros-->	
 		 	<div class="section nosotros" style="color:white" data-anchor="us">
- 				<h5 style="color:white">¿Quiénes somos?</h5>
- 				<h6>Conoce a nuestro equipo de trabajo</h6>
+ 				<h5 style="color:white">Conoce a nuestro equipo de trabajo</h5>
+ 				<p class="conocenos">¿Quiénes somos?</p>
  				<a href="nosotros.html"><div class="buttonwhite">Ver más</div></a>
 			</div>
 <!--Clientes-->
 		 	<div class="section clients" data-anchor="clients">
 		 		<h2 style="color:#0f1230">Clientes</h2>
-		 		<div>
-		 			<table>
-		 				<tr>
-		 					<td>Hola</td>
-		 					<td>Hola</td>
-		 					<td>Hola</td>
-		 					<td>Hola</td>
-		 				</tr>
-		 				<tr>
-		 					<td>Hola</td>
-		 					<td>Hola</td>
-		 					<td>Hola</td>
-		 					<td>Hola</td>
-		 				</tr>
-		 			</table>
-		 		</div>
+		 		<img class="cliente1" src='img/cliente1g.png'/>
 		 	</div>
 
 		</div>
