--- a/daniel.html
+++ b/daniel.html
@@ -89,7 +89,12 @@
 <!--Clientes-->
 		 	<div class="section clients" data-anchor="clients">
 		 		<h2 style="color:#0f1230">Clientes</h2>
-		 		<img class="cliente1" src='img/cliente1g.png'/>
+		 		<div class="client-container">
+			 		<img class="cliente1 general-client" src='img/cliente1g.png'/>
+			 		<img class="cliente2 general-client" src='img/cliente2g.png'/>
+			 		<img class="cliente3 general-client" src='img/cliente3g.png'/>
+			 		<img class="cliente4 general-client" src='img/cliente4g.png'/>
+		 		</div>
 		 	</div>
 
 		</div>
