Estilo del nombre de la sección

--- a/daniel.html
+++ b/daniel.html
@@ -88,7 +88,7 @@
 			</div>
 <!--Clientes-->
 		 	<div class="section clients" data-anchor="clients">
-		 		<h2 style="color:#0f1230">Clientes</h2>
+		 		<p class="title-clients">Nuestros clientes</p>
 		 		<div class="client-container">
 			 		<img class="cliente1 general-client" src='img/cliente1g.png'/>
 			 		<img class="cliente2 general-client" src='img/cliente2g.png'/>
