Chambia el color del logo

--- a/daniel.html
+++ b/daniel.html
@@ -88,15 +88,17 @@
 			</div>
 <!--Clientes-->
 		 	<div class="section clients" data-anchor="clients">
-		 		<p class="title-clients">Nuestros clientes</p>
-		 		<div class="client-container">
-			 		<img class="cliente1 general-client" src='img/cliente1g.png'/>
-			 		<img class="cliente2 general-client" src='img/cliente2g.png'/>
-			 		<img class="cliente3 general-client" src='img/cliente3g.png'/>
-			 		<img class="cliente4 general-client" src='img/cliente4g.png'/>
+		 		<div class="clients">
+			 		<p class="title-clients">Nuestros clientes</p>
+			 		<div class="client-container">
+				 		<img class="cliente1 general-client" src='img/cliente1g.png'/>
+				 		<img class="cliente2 general-client" src='img/cliente2g.png'/>
+				 		<img class="cliente3 general-client" src='img/cliente3g.png'/>
+				 		<img class="cliente4 general-client" src='img/cliente4g.png'/>
+			 		</div>
 		 		</div>
+		 		<div class="footer">daniel</div>
 		 	</div>
-
 		</div>
 	</body>
 </html>
