--- a/daniel.html
+++ b/daniel.html
@@ -97,7 +97,20 @@
 				 		<img class="cliente4 general-client" src='img/cliente4g.png'/>
 			 		</div>
 		 		</div>
-		 		<div class="footer">daniel</div>
+		 		<div class="footer">
+			 		<div class="three">
+			 			<p class="footer-conocenos">Conócenos</p>
+				 		<p class="footer-adress"> Piedras Negras #229, 
+							Col. Mitras Centro C.P. 64650</p>
+						<p class="footer-tel">+52 (81) 21392290</p>
+						<p class="footer-hola">Dinos Hola!</p>
+						<p class="footer-web">jobs@bitlab.mx</p>
+			 		</div>
+			 		<div class="three">
+						<p class="footer-rights">2015 - BITLAB - All rights reserved</p>
+			 		</div>
+			 		<div class="three"></div>
+		 		</div>
 		 	</div>
 		</div>
 	</body>
