--- a/nosotros.html
+++ b/nosotros.html
@@ -28,7 +28,7 @@
 		</div>
 		
 		<div>
-			<img class="logo" src="img/bitlab.png">
+			<a href="daniel.html #main"><img class="logo" src="img/bitlab.png"></a>
 			<img class="menu" src="img/menu.png" onclick="toggleMenu()">
 		</div>
 <!--Main-->
@@ -40,7 +40,7 @@
 	 			</a>
 			</div>
 <!--Process-->
-		<div class="section procesocontent" data-anchor="nosotroscontent">
+		<div class="section nosotroscontent" data-anchor="nosotroscontent">
 		 	<div class="center">
 		 		<h3>Consultoría sin costo ni obligaciones.</h3>
 				<h4>El camino al éxito</h4>
