--- a/proceso.html
+++ b/proceso.html
@@ -28,7 +28,7 @@
 		</div>
 		
 		<div>
-			<img class="logo" src="img/bitlab.png">
+			<a href="daniel.html #main"><img class="logo" src="img/bitlab.png"></a>
 			<img class="menu" src="img/menu.png" onclick="toggleMenu()">
 		</div>
 <!--Main-->
@@ -49,40 +49,12 @@
 		 	</div>
 <!--Pasos-->
 			<div class="section pasos">
-				<table>
-					<tr>
-						<td><img class="ilust" src="img/descubrir.png"/></td>
-						<td class="text">
-							<h3>Consultoría sin costo ni obligaciones.</h3>
-							<h4>El camino al éxito</h4>
-							<div class="text center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci. Suspendisse eleifend, tortor eget convallis tincidunt, mi velit bibendum eros, eget consequat nisl justo sit amet lectus. Sed ornare elementum sapien et luctus. Nam elementum urna in blandit ornare. Suspendisse sed tortor vel lacus ultrices lobortis quis eget quam.</div>
-						</td>
-					</tr>
-					<tr>
-						<td class="text">
-							<h3>Consultoría sin costo ni obligaciones.</h3>
-							<h4>El camino al éxito</h4>
-							<div class="text center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci. Suspendisse eleifend, tortor eget convallis tincidunt, mi velit bibendum eros, eget consequat nisl justo sit amet lectus. Sed ornare elementum sapien et luctus. Nam elementum urna in blandit ornare. Suspendisse sed tortor vel lacus ultrices lobortis quis eget quam.</div>
-						</td>
-						<td><img class="ilust" src="img/desarrollo.png"/></td>
-					</tr>
-					<tr>
-						<td><img class="ilust" src="img/diseñar.png"/></td>
-						<td class="text">
-							<h3>Consultoría sin costo ni obligaciones.</h3>
-							<h4>El camino al éxito</h4>
-							<div class="text center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci. Suspendisse eleifend, tortor eget convallis tincidunt, mi velit bibendum eros, eget consequat nisl justo sit amet lectus. Sed ornare elementum sapien et luctus. Nam elementum urna in blandit ornare. Suspendisse sed tortor vel lacus ultrices lobortis quis eget quam.</div>
-						</td>
-					</tr>
-					<tr>
-						<td class="text">
-							<h3>Consultoría sin costo ni obligaciones.</h3>
-							<h4>El camino al éxito</h4>
-							<div class="text center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci. Suspendisse eleifend, tortor eget convallis tincidunt, mi velit bibendum eros, eget consequat nisl justo sit amet lectus. Sed ornare elementum sapien et luctus. Nam elementum urna in blandit ornare. Suspendisse sed tortor vel lacus ultrices lobortis quis eget quam.</div>
-						</td>
-						<td><img class="ilust" src="img/celebrar.png"/></td>
-					</tr>
-				</table>
+				<div class="inline">
+					<img class="ilust" src="img/descubrir.png"/>
+					<h3>Consultoría sin costo ni obligaciones.</h3>
+					<h4>El camino al éxito</h4>
+					<div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci. Suspendisse eleifend, tortor eget convallis tincidunt, mi velit bibendum eros, eget consequat nisl justo sit amet lectus. Sed ornare elementum sapien et luctus. Nam elementum urna in blandit ornare. Suspendisse sed tortor vel lacus ultrices lobortis quis eget quam.</div>
+				</div>
 			</div>
 		</div>
 </body>
