--- a/daniel.html
+++ b/daniel.html
@@ -28,7 +28,7 @@
 		</div>
 		
 		<div>
-			<img class="logo" src="img/bitlab.png">
+			<a href="#main"><img class="logo" src="img/bitlab.png"></a>
 			<img class="menu" src="img/menu.png" onclick="toggleMenu()">
 		</div>
 <!--Main-->
