Corrección en Proceso

--- a/proceso.html
+++ b/proceso.html
@@ -10,6 +10,7 @@
 	<script src="assets/javascript/fullPageInitializer.js"></script>
     <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 	<link href='https://fonts.googleapis.com/css?family=Volkhov:400italic|Nunito:300' rel='stylesheet' type='text/css'>
+<script type="text/javascript" src="vendors/jquery.slimscroll.min.js"></script>
 </head>
 
 <body>
@@ -49,11 +50,37 @@
 		 	</div>
 <!--Pasos-->
 			<div class="section pasos">
-				<div class="inline">
+				<div class="h-center">
 					<img class="ilust" src="img/descubrir.png"/>
+					<div class="contentpasos">
 					<h3>Consultoría sin costo ni obligaciones.</h3>
 					<h4>El camino al éxito</h4>
-					<div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci. Suspendisse eleifend, tortor eget convallis tincidunt, mi velit bibendum eros, eget consequat nisl justo sit amet lectus. Sed ornare elementum sapien et luctus. Nam elementum urna in blandit ornare. Suspendisse sed tortor vel lacus ultrices lobortis quis eget quam.</div>
+					<p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci. Suspendisse eleifend, tortor eget convallis tincidunt, mi velit bibendum eros, eget consequat nisl justo sit amet lectus. Sed ornare elementum sapien et luctus. Nam elementum urna in blandit ornare. Suspendisse sed tortor vel lacus ultrices lobortis quis eget quam.</p>
+					</div>
+				</div>
+				<div class="h-center">
+					<div class="contentpasos">
+					<h3>Consultoría sin costo ni obligaciones.</h3>
+					<h4>El camino al éxito</h4>
+					<p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci. Suspendisse eleifend, tortor eget convallis tincidunt, mi velit bibendum eros, eget consequat nisl justo sit amet lectus. Sed ornare elementum sapien et luctus. Nam elementum urna in blandit ornare. Suspendisse sed tortor vel lacus ultrices lobortis quis eget quam.</p>
+					</div>
+					<img class="ilust" src="img/diseñar.png"/>
+				</div>
+				<div class="h-center">
+					<img class="ilust" src="img/desarrollo.png"/>
+					<div class="contentpasos">
+					<h3>Consultoría sin costo ni obligaciones.</h3>
+					<h4>El camino al éxito</h4>
+					<p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci. Suspendisse eleifend, tortor eget convallis tincidunt, mi velit bibendum eros, eget consequat nisl justo sit amet lectus. Sed ornare elementum sapien et luctus. Nam elementum urna in blandit ornare. Suspendisse sed tortor vel lacus ultrices lobortis quis eget quam.</p>
+					</div>
+				</div>
+				<div class="h-center">
+					<div class="contentpasos">
+					<h3>Consultoría sin costo ni obligaciones.</h3>
+					<h4>El camino al éxito</h4>
+					<p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci. Suspendisse eleifend, tortor eget convallis tincidunt, mi velit bibendum eros, eget consequat nisl justo sit amet lectus. Sed ornare elementum sapien et luctus. Nam elementum urna in blandit ornare. Suspendisse sed tortor vel lacus ultrices lobortis quis eget quam.</p>
+					</div>
+					<img class="ilust" src="img/celebrar.png"/>
 				</div>
 			</div>
 		</div>
