--- a/daniel.html
+++ b/daniel.html
@@ -42,29 +42,6 @@
 <!--Servicios-->
 		 	<div class="section services" data-anchor="services">
 		 		<h2>Servicios</h2>
-		 		<table>
-					<tr>
-						<td class="servicios">
-				 			<ul>
-				 				<li>	
-				 					Desarrollo web
-				 				</li>
-				 				<li>
-				 					Diseño web
-				 				</li>
-				 				<li>
-				 					Diseño gráfico
-				 				</li>
-				 				<li>
-				 					Branding
-				 				</li>
-				 				<li>
-				 					Social media
-				 				</li>
-				 			</ul>
-						</td>
-					</tr>
-		 		</table>
 		 	</div>
 <!--Proceso-->
 		 	<div class="section proceso" data-anchor="process">
@@ -74,7 +51,7 @@
 			 			<td id="content">
 			 				<h3>Consultoría sin costo ni obligaciones.</h3>
 			 				<h4>CONOCE NUESTRO PROCESO DE TRABAJO</h4>
-			 				<div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci. Suspendisse eleifend, tortor eget convallis tincidunt, mi velit bibendum eros, eget consequat nisl justo sit amet lectus. Sed ornare elementum sapien et luctus. Nam elementum urna in blandit ornare. Suspendisse sed tortor vel lacus ultrices lobortis quis eget quam.</p>
+			 				<p="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci. Suspendisse eleifend, tortor eget convallis tincidunt, mi velit bibendum eros, eget consequat nisl justo sit amet lectus. Sed ornare elementum sapien et luctus. Nam elementum urna in blandit ornare. Suspendisse sed tortor vel lacus ultrices lobortis quis eget quam.</p>
 			 				<a href="proceso.html"><div class="button">Saber más</div></a>
 			 			</td>
 		 			</tr>
