--- a/daniel.html
+++ b/daniel.html
@@ -23,15 +23,30 @@
 					<li><a href="proceso.html" onclick="toggleMenu()"><span>Proceso</span></a></li>
 					<li><a href="nosotros.html" onclick="toggleMenu()"><span>Nosotros</span></a></li>
 					<li><a href="#clients" onclick="toggleMenu()"><span>Clientes</span></a></li>
-					<li><a href="#" onclick="toggleMenu()"><span>Contacto</span></a></li>
 				</ul>
 			</div>
 		</div>
-		
+
+
+<!--contacto-->
+		<div class="slidebarContact">
+			<div class="contact-container">
+				<p>Contáctanos</p>
+				<p class="text">Hola</p>
+				<a onclick="toggleContact()">Cerrar</a>
+			</div>
+		</div>
+<!--Contacto-->
+
+
+
 		<div>
 			<a href="#main"><img class="logo" src="img/bitlab.png"></a>
 			<img class="menu" src="img/menu.png" onclick="toggleMenu()">
+			<div class="contactBtn" onclick="toggleContact()">Contacto</div>
 		</div>
+
+
 <!--Main-->
 		<div id="fullpage">
 			<div class="section main" data-anchor="main">
@@ -52,7 +67,7 @@
 			 			<td id="content">
 			 				<h3>Consultoría sin costo ni obligaciones.</h3>
 			 				<h4>CONOCE NUESTRO PROCESO DE TRABAJO</h4>
-			 				<p="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci. Suspendisse eleifend, tortor eget convallis tincidunt, mi velit bibendum eros, eget consequat nisl justo sit amet lectus. Sed ornare elementum sapien et luctus. Nam elementum urna in blandit ornare. Suspendisse sed tortor vel lacus ultrices lobortis quis eget quam.</p>
+			 				<div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci. Suspendisse eleifend, tortor eget convallis tincidunt, mi velit bibendum eros, eget consequat nisl justo sit amet lectus. Sed ornare elementum sapien et luctus. Nam elementum urna in blandit ornare. Suspendisse sed tortor vel lacus ultrices lobortis quis eget quam.</p>
 			 				<a href="proceso.html"><div class="button">Saber más</div></a>
 			 			</td>
 		 			</tr>
