--- a/daniel.html
+++ b/daniel.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Bitlab</title>
 		<meta charset="UTF-8">
+		<script type="text/javascript" src="vendors/jquery.slimscroll.min.js"></script>
 		<link rel="stylesheet" type="text/css" href="jquery.fullPage.css" />
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 		<script type="text/javascript" src="jquery.fullPage.js"></script>
@@ -64,7 +65,7 @@
  				<a href="nosotros.html"><div class="buttonwhite">Ver más</div></a>
 			</div>
 <!--Clientes-->
-		 	<div class="section clients" data-anchor="clients">
+		 	<div class="section clients" data-anchor="clients" style="height: 1900px;">
 		 		<div class="clients">
 			 		<p class="title-clients">Nuestros clientes</p>
 			 		<div class="client-container">
@@ -85,6 +86,9 @@
 			 		</div>
 			 		<div class="three">
 						<p class="footer-rights">2015 - BITLAB - All rights reserved</p>
+			 		</div>
+			 		<div class="three" style="height: 100%">
+						<a href="https://www.facebook.com/" class="footer-button" target="_blank"><img src="img/facebook.png"></a>
 			 		</div>
 			 		<div class="three"></div>
 		 		</div>
